--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
-
-    <head>
+  <head>
         <meta charset="UTF-8">
-        <title>CS472 Group Project</title>
-    </head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <body>
-        <h1>Hello, CS472!</h1>
-        <p>This is the start of your group project. Feel free to make it your own!</p>
-    </body>
+<title> Basketball for all</title>
 
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
+  </head>
+   <body>
+<div class="text-center">
+<h1> All Basketball </h1>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+<img src="Lebron James.jpeg" class = "img-fluid"  alt = "LebronJames">
+<img src = "Cooper Flag.jpeg" class = "img-fluid" alt = "CooperFlag">
+<img src = "Caitlin Clark.jpeg" class = "img-fluid" alt = "CaitlinClark">
+</div>
+<p> Welcome to a website catered towards basketball fans of college, professional and olympic basketball or anything inbetween! </p>
+<div class = "text-center ">
+   <button type="button" class="btn btn-primary">Stats</button>
+
+</div>
+
+   </body>
 </html>
