changed file names for standings page

--- a/Home page.html
+++ b/Home page.html
@@ -16,11 +16,11 @@
              NBA
            </button>
            <ul class="dropdown-menu">
-             <li><a class="dropdown-item" href="http://127.0.0.1:3000/NBA stat leaders.html">Stat leaders</a></li>
-             <li><a class="dropdown-item" href="http://127.0.0.1:3000/NBA about page.html">About NBA</a></li>
-             <li><a class="dropdown-item" href="http://127.0.0.1:3000/NBA season tickets.html">Season Tickets</a></li>
+             <li><a class="dropdown-item" href="NBA stat leaders.html">Stat leaders</a></li>
+             <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+             <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
              <li><hr class="dropdown-divider"></li>
-             <li><a class="dropdown-item" href="#">Something else here</a></li>
+             <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
            </ul>
          </div>
          <div class="d-flex gap-2">
