--- a/nba_standings.html
+++ b/nba_standings.html
@@ -11,7 +11,7 @@
 <body>
     <h1>NBA Standings by Conference (2024 - 2025)</h1>
     <div id="standings-container"></div>
-    <script src="nba.js"></script>
+    <script src="nba_standings.js"></script>
 </body>
 
 </html>
