--- a/index.html
+++ b/index.html
@@ -1,125 +1,203 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-      <link rel ='stylesheet' href="stylesheet.css">
-   </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Basketball for All</title>
 
-      <body>
-   <div class = "text-center ">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+    crossorigin="anonymous"
+  />
+
+  <link rel="stylesheet" href="stylesheet.css" />
+
+  <style>
+    .hero {
+      background-color: #fff;
+      background-image: url("https://render.fineartamerica.com/images/rendered/medium/print/8/5.5/break/images/artworkimages/medium/3/36-lebron-james-adam-pantozzi.jpg");
+      color: #fff;
+      padding: 6rem 1rem;
+      text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
+    }
+    .gallery img {
+      border-radius: 0.5rem;
+      transition: transform 0.3s;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Basketball for All</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#mainNav"
+        aria-controls="mainNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="nbaDropdown"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="ncaadrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="#">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="olympicsDrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+          </li>
+        </ul>
       </div>
-      <div class="d-flex gap-2">
-         <div class="dropdown">
-           <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-             NBA
-           </button>
-           <ul class="dropdown-menu">
-             <li><a class="dropdown-item" href="NBA stat leaders.html">Stat leaders</a></li>
-             <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-             <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-             <li><hr class="dropdown-divider"></li>
-             <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-           </ul>
-         </div>
-         <div class="d-flex gap-2">
-            <div class="dropdown">
-              <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                NCAA
-              </button>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="">Stats leaders</a></li>
-                <li><a class="dropdown-item" href="ANOTHER_PAGE_URL_1">Another Page 1</a></li>
-                <li><a class="dropdown-item" href="ANOTHER_PAGE_URL_2">Another Page 2</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </div>
-            <div class="d-flex gap-2">
-               <div class="dropdown">
-                 <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                   Olympics
-                 </button>
-                 <ul class="dropdown-menu">
-                   <li><a class="dropdown-item" href="">TBD</a></li>
-                   <li><a class="dropdown-item" href="ANOTHER_PAGE_URL_1">Another Page 1</a></li>
-                   <li><a class="dropdown-item" href="ANOTHER_PAGE_URL_2">Another Page 2</a></li>
-                   <li><hr class="dropdown-divider"></li>
-                   <li><a class="dropdown-item" href="#">Something else here</a></li>
-                 </ul>
-               </div>
-       
+    </div>
+  </nav>
 
-</div>  
-<div> 
-<button type="button" class="btn btn-primary">Fantasty</button>
-</div>      
+  <header class="hero text-center mb-5">
+    <div class="container">
+      <h1 class="display-3">All Basketball</h1>
+      <p class="lead">A hub for college, professional &amp; Olympic basketball fans.</p>
+    </div>
+  </header>
 
-<title> Basketball for all</title>
+  <section class="container gallery mb-5">
+    <div class="row g-4 justify-content-center">
+      <div class="col-6 col-md-4 text-center">
+        <img src="Lebron James.jpeg" alt="LeBron James" class="img-fluid" />
+        <h6 class="mt-2">LeBron James</h6>
+      </div>
+      <div class="col-6 col-md-4 text-center">
+        <img src="Cooper Flag.jpeg" alt="Cooper Flag" class="img-fluid" />
+        <h6 class="mt-2">Cooper Flag</h6>
+      </div>
+      <div class="col-6 col-md-4 text-center">
+        <img src="Caitlin Clark.jpeg" alt="Caitlin Clark" class="img-fluid" />
+        <h6 class="mt-2">Caitlin Clark</h6>
+      </div>
+    </div>
+  </section>
 
+  <section class="container text-center mb-5">
+    <p class="fs-5">
+      Welcome to a website catered towards basketball fans of college,
+      professional and Olympic basketball—or anything in between!
+    </p>
+  </section>
 
-<div class="text-center mt-3">
-<h1> All Basketball </h1>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-<img src="Lebron James.jpeg" class = "img-fluid"  alt = "LebronJames">
-<img src = "Cooper Flag.jpeg" height = 300 width = 300 class = "img-fluid" alt = "CooperFlag">
-<img src = "Caitlin Clark.jpeg" class = "img-fluid" alt = "CaitlinClark">
-</div>
-<div class = "text-center ">
-
-<p> Welcome to a website catered towards basketball fans of college, professional and olympic basketball or anything inbetween! </p>
-</div>
-</div>
-
-
-
- <div class="container py-5">
-   <h2>Latest Blog Posts</h2>
-   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-     <div class="col">
-       <div class="card h-100">
-         <img src="path/to/nba-image.jpg" class="card-img-top" alt="NBA Trending Topics">
-         <div class="card-body">
-           <h5 class="card-title">NBA National Basketball Association</h5>
-           <p class="card-text">NBA trending topics and articles.</p>
-           <a href="https://www.nba.com/news/category/trending-topics" class="btn btn-primary">Read More</a>
-         </div>
-         <div class="card-footer">
-           <small class="text-muted">Always up to date</small>
-         </div>
-       </div>
-     </div>
-     <div class="col">
-       <div class="card h-100">
-         <img src="path/to/another-blog-image.jpg" class="card-img-top" alt="Another Blog Post">
-         <div class="card-body">
-           <h5 class="card-title">NCAA National Collegiate Athletic Association</h5>
-           <p class="card-text">NCAA trending topics and stories.</p>
-           <a href="https://www.ncaa.com/" class="btn btn-primary">Read More</a>
-         </div>
-         <div class="card-footer">
-           <small class="text-muted">Always up to date</small>
-         </div>
-       </div>
-     </div>
-     <div class="col">
-      <div class="card h-100">
-        <img src="path/to/another-blog-image.jpg" class="card-img-top" alt="Another Blog Post">
-        <div class="card-body">
-          <h5 class="card-title">Olympics Basketball</h5>
-          <p class="card-text">Quick basketball hisotry and basketball spotlight articles.</p>
-          <a href="https://www.olympics.com/en/sports/basketball" class="btn btn-primary">Read More</a>
+  <section class="container py-5">
+    <h2 class="mb-4">Latest Blog Posts</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="path/to/nba-image.jpg" class="card-img-top" alt="NBA Trending">
+          <div class="card-body">
+            <h5 class="card-title">NBA – National Basketball Association</h5>
+            <p class="card-text">Trending topics and in‑depth articles on the NBA.</p>
+            <a href="https://www.nba.com/news/category/trending-topics" class="btn btn-primary">
+              Read More
+            </a>
+          </div>
+          <div class="card-footer text-muted">
+            Always up to date
+          </div>
         </div>
-        <div class="card-footer">
-          <small class="text-muted">Always up to date</small>
+      </div>
+
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="path/to/ncaa-image.jpg" class="card-img-top" alt="NCAA">
+          <div class="card-body">
+            <h5 class="card-title">NCAA – College Basketball</h5>
+            <p class="card-text">Latest stories and stats from the NCAA.</p>
+            <a href="https://www.ncaa.com/" class="btn btn-primary">Read More</a>
+          </div>
+          <div class="card-footer text-muted">
+            Always up to date
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="path/to/olympics-image.jpg" class="card-img-top" alt="Olympic Basketball">
+          <div class="card-body">
+            <h5 class="card-title">Olympic Basketball</h5>
+            <p class="card-text">History highlights and spotlight features.</p>
+            <a href="https://www.olympics.com/en/sports/basketball" class="btn btn-primary">
+              Read More
+            </a>
+          </div>
+          <div class="card-footer text-muted">
+            Always up to date
+          </div>
         </div>
       </div>
     </div>
-   </div>
- </div>
- 
- 
+  </section>
 
-   </body>
+  <footer class="bg-dark text-center text-white py-4">
+    <div class="container">
+      <p class="mb-0">&copy; 2025 Basketball for All. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"
+  ></script>
+</body>
 </html>
