--- a/nba_standings.html
+++ b/nba_standings.html
@@ -4,11 +4,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+    crossorigin="anonymous"
+  />
+
+  <link rel="stylesheet" href="stylesheet.css" />
     <title>NBA Main Page</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">Basketball for All</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mainNav"
+            aria-controls="mainNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+    
+          <div class="collapse navbar-collapse" id="mainNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="nbaDropdown"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >NBA</a>
+                <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+                  <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+                  <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+                  <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="ncaadrop"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >NCAA</a>
+                <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+                  <li><a class="dropdown-item" href="#">Stat Leaders</a></li>
+                  <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="olympicsDrop"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >Olympics</a>
+                <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+                  <li><a class="dropdown-item" href="#">TBD</a></li>
+                  <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+                  <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
     <h1>NBA Standings by Conference (2024 - 2025)</h1>
     <div id="standings-container"></div>
     <script src="nba_standings.js"></script>
