--- a/NCAA  team stats.html
+++ b/NCAA  team stats.html
@@ -7,6 +7,78 @@
         <link rel ='stylesheet' href="stylesheet.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Basketball for All</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#mainNav"
+        aria-controls="mainNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="nbaDropdown"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA season tickets.html">Season Tickets</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/nba_standings.html">Standings</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="ncaadrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NCAA  team stats.html">Offensive Team Stats </a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="olympicsDrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
         <h3>NCAA Men's Basketball Offensive Rating (Points Per Game)</h3>
         <p>Here is a list of teams and their points per game (PPG), which serves as a measure of their offensive rating for the current season:</p>
