Update NBA stat leaders.html
Added navbar

--- a/NBA stat leaders.html
+++ b/NBA stat leaders.html
@@ -12,6 +12,78 @@
 
   </head>
    <body>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Basketball for All</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#mainNav"
+        aria-controls="mainNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="nbaDropdown"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA season tickets.html">Season Tickets</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/nba_standings.html">Standings</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="ncaadrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NCAA  team stats.html">Offensive Team Stats </a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="olympicsDrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <div class="text-center">
 <h1>  NBA 2024-2025 Season Stat Leaders  </h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
