Update NBA about page.html
updated navbar URLS

--- a/NBA about page.html
+++ b/NBA about page.html
@@ -38,11 +38,11 @@
               aria-expanded="false"
             >NBA</a>
             <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA about page.html">About NBA</a></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/NBA season tickets.html">Season Tickets</a></li>
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="http://127.0.0.1:3002/nba_standings.html">Standings</a></li>
+              <li><a class="dropdown-item" href="NBA_standings.html">Standings</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
