--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
               aria-expanded="false"
             >NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-              <li><a class="dropdown-item" href="#">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Offense Team Stats 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
