Update NBA season tickets.html

--- a/NBA season tickets.html
+++ b/NBA season tickets.html
@@ -211,7 +211,7 @@
             resultsHTML += `<p>Team: All Teams</p>`;
         }
 
-        ticketResultsDiv.innerHTML = resultsHTML + `<p>Need to add season ticket data ASAP`;
+        ticketResultsDiv.innerHTML = resultsHTML + `<p>The season is over silly! Wait for tickets in the fall!`;
     });
 </script>
 
