--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             >NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="NCAA team stats.html">Offense Team Stats 1</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
