:added images to src folder

--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
   <section class="container gallery mb-5">
     <div class="row g-4 justify-content-center">
       <div class="col-6 col-md-4 text-center">
-        <img src="Lebron James.jpeg" alt="LeBron James" class="img-fluid" />
+        <img src="src/Lebron James.jpeg" alt="LeBron James" class="img-fluid" />
         <h6 class="mt-2">LeBron James</h6>
       </div>
       <div class="col-6 col-md-4 text-center">
-        <img src="Cooper Flag.jpeg" alt="Cooper Flag" class="img-fluid" />
+        <img src="src/Cooper Flag.jpeg" alt="Cooper Flag" class="img-fluid" />
         <h6 class="mt-2">Cooper Flag</h6>
       </div>
       <div class="col-6 col-md-4 text-center">
-        <img src="Caitlin Clark.jpeg" alt="Caitlin Clark" class="img-fluid" />
+        <img src="src/Caitlin Clark.jpeg" alt="Caitlin Clark" class="img-fluid" />
         <h6 class="mt-2">Caitlin Clark</h6>
       </div>
     </div>
