--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               aria-expanded="false"
             >Olympics</a>
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="#">TBD</a></li>
+              <li><a class="dropdown-item" href="Olympics Winners.html">Olympics Winners.html</a></li>
               <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li><hr class="dropdown-divider"></li>
