--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
               aria-expanded="false"
             >Olympics</a>
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
               <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else</a></li>
