--- a/index.html
+++ b/index.html
@@ -136,7 +136,14 @@
       professional and Olympic basketball—or anything in between!
     </p>
   </section>
-
+  <div id="nba-playoffs-ad" style="background-color: #f8f8f8; border: 1px solid #ddd; padding: 20px; text-align: center; font-family: sans-serif;">
+    <h2 style="color: #000; margin-bottom: 15px;">🔥 The NBA Playoffs Are HERE! 🔥</h2>
+    <p style="color: #555; font-size: 1.1em; margin-bottom: 20px;">Witness the intensity, the drama, and the unforgettable moments as the best teams in the league battle for the ultimate prize!</p>
+    <a href="https://www.nba.com/playoffs/2025" style="display: inline-block; background-color: #007bff; color: #fff; padding: 12px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; font-size: 1.1em;">
+      Follow the Action Now!
+    </a>
+    <p style="color: #777; font-size: 0.9em; margin-top: 15px;">Don't miss a single game. Live scores, highlights, and analysis available.</p>
+  </div>
   <section class="container py-5">
     <h2 class="mb-4">Latest Blog Posts</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
