--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="olympicsDrop"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="">NBA gamechangers</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
+          </li>
           <li class="nav-item">
             <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
           </li>
