--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               aria-expanded="false"
             >Game Changers</a>
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="">NBA gamechangers</a></li>
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
               <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li><hr class="dropdown-divider"></li>
