--- a/NBA gamechangers.html
+++ b/NBA gamechangers.html
@@ -162,7 +162,7 @@
                 </li>  
                   </li>            </div>
             <div style="flex: 1; text-align: right;">
-              <img src="Curry shooting a 3.jpg" alt="Curry 3" style="max-width: 100%; height: auto;">
+              <img src="Stephen Curry 3 point record.jpg" alt="Curry 3 record" style="max-width: 100%; height: auto;">
             </div>
           </div>
 
