--- a/Olympics winners.html
+++ b/Olympics winners.html
@@ -117,7 +117,7 @@
             </tr>
             <tr>
               <td style="border: 1px solid #ddd; padding: 8px;">2024 (Paris)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">To be determined</td>
+              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
             </tr>
           </tbody>
         </table>
@@ -153,7 +153,7 @@
             </tr>
             <tr>
               <td style="border: 1px solid #ddd; padding: 8px;">2024 (Paris)</td>
-              <td style="border: 1px solid #ddd; padding: 8px;">To be determined</td>
+              <td style="border: 1px solid #ddd; padding: 8px;">United States</td>
             </tr>
           </tbody>
         </table>
