--- a/Olympics winners.html
+++ b/Olympics winners.html
@@ -95,7 +95,7 @@
           <thead>
             <tr>
               <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Year</th>
-              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country</th>
+              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country (Gold Medalists)</th>
             </tr>
           </thead>
           <tbody>
@@ -131,7 +131,7 @@
           <thead>
             <tr>
               <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Year</th>
-              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country</th>
+              <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Winning Country(Gold Medalists)</th>
             </tr>
           </thead>
           <tbody>
