--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             The debate over the greatest basketball player of all time (GOAT) continues to rage on. Is it Michael Jordan, with his perfect record in the Finals and unmatched competitive fire? Or is it LeBron James, with his incredible all-around game, longevity, and statistical dominance?
         </p>
 
-        <h3>Comments:</h3>
-<div class = "text-center">
+        <h3>Comments:</h3>  
+<div class = "text-left">
         <div id="comments-section">
             <div class="comment">
                 <strong class="user">MJFan84:</strong>
@@ -284,7 +284,6 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="path/to/nba-image.jpg" class="card-img-top" alt="NBA Trending">
           <div class="card-body">
             <h5 class="card-title">NBA – National Basketball Association</h5>
             <p class="card-text">Trending topics and in‑depth articles on the NBA.</p>
@@ -300,7 +299,6 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="path/to/ncaa-image.jpg" class="card-img-top" alt="NCAA">
           <div class="card-body">
             <h5 class="card-title">NCAA – College Basketball</h5>
             <p class="card-text">Latest stories and stats from the NCAA.</p>
@@ -314,7 +312,6 @@
 
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="path/to/olympics-image.jpg" class="card-img-top" alt="Olympic Basketball">
           <div class="card-body">
             <h5 class="card-title">Olympic Basketball</h5>
             <p class="card-text">History highlights and spotlight features.</p>
