--- a/NBA gamechangers.html
+++ b/NBA gamechangers.html
@@ -13,6 +13,7 @@
   />
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <div id="navbar"></div>
 
       <section class="container my-5">
