--- a/index.html
+++ b/index.html
@@ -33,94 +33,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Basketball for All</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#mainNav"
-        aria-controls="mainNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="nbaDropdown"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NBA</a>
-            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="ncaadrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >NCAA</a>
-            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="olympicsDrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >Olympics</a>
-            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
-              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="olympicsDrop"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >Game Changers</a>
-            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div id="navbar"></div>
 
   <header class="hero text-center mb-5">
     <div class="container">
@@ -338,5 +251,13 @@
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"
   ></script>
+  <script>
+    fetch('navbar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      })
+      .catch(error => console.error('Error loading navbar:', error));
+  </script>
 </body>
 </html>
