--- a/nba_standings.html
+++ b/nba_standings.html
@@ -11,7 +11,7 @@
   <title>NBA Main Page</title>
 </head>
 
-<body>
+<body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">Basketball for All</a>
@@ -83,7 +83,7 @@
   </nav>
 
   <h1>NBA Standings by Conference (2024 - 2025)</h1>
-  <div id="standings-container"></div>
+  <div class="container py-5" id="standings-container"></div>
   <script src="nba_standings.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
