--- a/index.html
+++ b/index.html
@@ -95,8 +95,18 @@
               <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Fantasy</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA betting.html">Sports betting</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else</a></li>
+            </ul>
           </li>
         </ul>
       </div>
