--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
               aria-expanded="false">Fantasy</a>
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
-              <li><a class="dropdown-item" href="NBA betting.html">Sports betting</a></li>
+              <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
               <li><a class="dropdown-item" href="#">Another Page 1</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li>
