--- a/NCAA gamechangers.html
+++ b/NCAA gamechangers.html
@@ -104,7 +104,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/485.png" class="card-img-top"
+                    <img src="Kareem Abdul Jabbar college.jpeg" class="card-img-top"
                         alt="Kareem Abdul-Jabbar">
                     <div class="card-body">
                         <h5 class="card-title">Lew Alcindor (Kareem Abdul-Jabbar)</h5>
@@ -119,7 +119,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://www.nba.com/images/cms/2024-01/bill-walton-headshot-75th.png" class="card-img-top"
+                    <img src="Bill Walton.jpeg" class="card-img-top"
                         alt="Bill Walton">
                     <div class="card-body">
                         <h5 class="card-title">Bill Walton</h5>
@@ -134,7 +134,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://www.nba.com/images/cms/2024-01/larry-bird-headshot-75th.png" class="card-img-top"
+                    <img src="Larry Bird college.jpeg" class="card-img-top"
                         alt="Larry Bird">
                     <div class="card-body">
                         <h5 class="card-title">Larry Bird</h5>
@@ -152,7 +152,7 @@
                     <img src="https://www.nba.com/images/cms/2024-01/magic-johnson-headshot-75th.png" class="card-img-top"
                         alt="Magic Johnson">
                     <div class="card-body">
-                        <h5 class="card-title">Magic Johnson</h5>
+                        <h5 class="Magic Johnson college.jpeg">Magic Johnson</h5>
                         <p class="card-text">
                             Magic Johnson's rivalry with Larry Bird began in the 1979 NCAA Championship game when his
                             Michigan State team defeated Bird's Indiana State Sycamores. Johnson's charisma, showmanship,
@@ -167,7 +167,7 @@
                     <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/190.png" class="card-img-top"
                         alt="Christian Laettner">
                     <div class="card-body">
-                        <h5 class="card-title">Christian Laettner</h5>
+                        <h5 class="Christian Laettner.jpeg">Christian Laettner</h5>
                         <p class="card-text">
                             Christian Laettner was a star player for Duke University in the early 1990s, leading the Blue
                             Devils to two consecutive national championships. Known for his clutch performances,
