--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               aria-expanded="false">Game Changers</a>
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -100,7 +100,7 @@
               aria-expanded="false">Fantasy</a>
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
+              <li><a class="dropdown-item" href="#"></a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li>
                 <hr class="dropdown-divider">
