--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="fantasy.html" id="fantasyDrop" data-bs-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
               aria-expanded="false">Fantasy</a>
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
-              <li><a class="dropdown-item" href="#"></a></li>
+              <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
               <li><a class="dropdown-item" href="#">Another Page 2</a></li>
               <li>
                 <hr class="dropdown-divider">
