--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               aria-expanded="false">NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">NCAA team offense stats</a></li>
+              <li><a class="dropdown-item" href="NCAA standings.html">NCAA top standings</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
