--- a/Olympic gamechangers.html
+++ b/Olympic gamechangers.html
@@ -107,7 +107,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://cdn.britannica.com/91/190691-050-84F9A6F0/Michael-Jordan-ball-vs-Lithuania-1992.jpg"
+                    <img src=""
                         class="card-img-top" alt="Michael Jordan Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Michael Jordan</h5>
@@ -122,7 +122,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://img.olympicchannel.com/images/image/private/t_16-9_1920/f_auto/primary/a9vtxui40v9jbxj9rzcu"
+                    <img src="Michael and Magic Olympics.jpeg"
                         class="card-img-top" alt="Magic Johnson Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Magic Johnson</h5>
@@ -138,7 +138,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://img.olympicchannel.com/images/image/private/t_16-9_1920/f_auto/primary/ycyyudjkwmftzlnf5vxe"
+                    <img src="Magic and Bird olympics.jpeg"
                         class="card-img-top" alt="Larry Bird Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Larry Bird</h5>
@@ -153,7 +153,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://img.olympicchannel.com/images/image/private/t_16-9_1920/f_auto/primary/x6qxux9mgl1nr5wueq9o"
+                    <img src="Lisa Leslie Olympics.jpeg"
                         class="card-img-top" alt="Lisa Leslie Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Lisa Leslie</h5>
@@ -168,7 +168,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://img.olympicchannel.com/images/image/private/t_16-9_1920/f_auto/primary/yz0ybbm8rdb5xho0x4rk"
+                    <img src="Lisa Leslie Olympics.jpg"
                         class="card-img-top" alt="Manu Ginóbili Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Manu Ginóbili</h5>
