--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
               <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><a class="dropdown-item" href="Olympic gamechangers.html">Olympics gamechangers</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
