--- a/Olympic gamechangers.html
+++ b/Olympic gamechangers.html
@@ -138,7 +138,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Magic and Bird olympics.jpeg"
+                    <img src="Magic and Bird olympics.jpg"
                         class="card-img-top" alt="Larry Bird Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Larry Bird</h5>
@@ -153,7 +153,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Lisa Leslie Olympics.jpeg"
+                    <img src="Lisa Leslie Olympics.jpg"
                         class="card-img-top" alt="Lisa Leslie Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Lisa Leslie</h5>
