--- a/Sports bet.html
+++ b/Sports bet.html
@@ -198,6 +198,21 @@
             document.getElementById('player-stat').value = '';
         });
     </script>
+    <div class="text-center"> 
+<div style="margin-bottom: 10px;">
+    <button style="padding: 10px 20px; background-color: #005aff; color: white; border: none; border-radius: 5px; cursor: pointer;" onclick="window.open('https://www.nba.com', '_blank');">
+      Visit the Official NBA Website
+    </button>
+    <p style="font-size: 0.8em; color: #777;">(Opens in a new tab)</p>
+  </div>
+        <div class="text-center"> 
+<div style="margin-bottom: 10px;">
+    <button style="padding: 10px 20px; background-color: #005aff; color: white; border: none; border-radius: 5px; cursor: pointer;" onclick="window.open('https://www.ncaa.com/', '_blank');">
+      Visit the Official NCAA Website
+    </button>
+    <p style="font-size: 0.8em; color: #777;">(Opens in a new tab)</p>
+  </div>
+</div>
 </body>
 
 </html>
