--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <p style="color: #777; font-size: 0.9em; margin-top: 15px;">Don't miss a single game. Live scores, highlights, and
       analysis available.</p>
   </div>
+  <div class="text-center">
   <div id="blog-container">
     <div class="blog-post-debate" id="goat-debate">
       <h2>The GOAT Debate: Jordan vs. LeBron</h2>
@@ -282,6 +283,7 @@
       }
     });
   </script>
+  </div>
   <section class="container py-5">
     <h2 class="mb-4">Latest Blog Posts</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
