--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
               <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
               <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><a class="dropdown-item" href="Olympics Legacy.html">Olympic Basketball Legacy</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
