--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
               <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
+              <li><a class="dropdown-item" href="playercompare.html">Compare stats</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
